kubernetes/apps/database/patroni/app/networkpolicy.yaml
---
# yaml-language-server: $schema=https://kubernetes-schemas.pages.dev/networking.k8s.io/networkpolicy_v1.json
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: patroni
spec:
  podSelector:
    matchLabels:
      app.kubernetes.io/name: patroni
  policyTypes:
    - Ingress
  ingress:
    - from:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: business
          podSelector:
            matchLabels:
              app.kubernetes.io/name: connelybrothers-web
      ports:
        - protocol: TCP
          port: 5432
        - protocol: TCP
          port: 8008
        - protocol: TCP
          port: 25432
        - protocol: TCP
          port: 25433
    - from:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: network
          podSelector:
            matchLabels:
              gateway.envoyproxy.io/owning-gateway-name: envoy-external
      ports:
        - protocol: TCP
          port: 8008
        - protocol: TCP
          port: 9187
        - protocol: TCP
          port: 9188
